--- a/Crab/style.css
+++ b/Crab/style.css
@@ -12,6 +12,6 @@ body{
     /* background: url("images/background.png") ; */
     background-size: cover;
     background-position: bottom;
-    background-color: aqua;
+    background-color: yellow;
     
 }
